tmp/browserless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: browserless
  name: browserless
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: browserless
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: browserless
    spec:
      containers:
        - image: browserless/chrome:latest
          name: browserless
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: "0.5"
              memory: 1Gi
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: browserless
  name: browserless
  namespace: n8n
spec:
  clusterIP: None
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: browserless
